# src/auth/auth.controller.ts
@@ -1,23 +1,36 @@
 import { Body, Example, Post, Route, Tags } from 'tsoa';
 import AuthService from './auth.services';
-import { AuthReturnedInterface, CreateUserInterface, LoginUserInterface } from './types/auth.types';
+import { CreateUserInterface, LoginUserInterface } from './types/auth.types';
+import { ResponseInterface } from '../utils/types/utils.types';
 
 @Route('auth')
 @Tags('Auth')
 export default class AuthController {
-    @Example<AuthReturnedInterface>({
-        token: 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6MjUsInVzZXJOYW1lIjoiT2x1IiwiZnVsbE5hbWUiOiJPbHUgU29sYSIsImVtYWlsIjoib2xlQG1lLmNvbSIsImlhdCI6MTYzNTcwMzU5NywiZXhwIjoxNjM1NzQ2Nzk3fQ.OLq3KN-DpQXnB9ttNcu1i_HaMTNA115b7hwZTP277YM',
+    @Example<ResponseInterface>({
+        status: 'success',
+        data: {
+            statusCode: 201,
+            message: 'New user created',
+            payload:
+                'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6NDAsInVzZXJOYW1lIjoiT2x1MTEiLCJmdWxsTmFtZSI6Ik9sdSBTb2xhIiwiZW1haWwiOiJvbHVzQG1lLmNvbSIsImlhdCI6MTYzNTg0NjY2MSwiZXhwIjoxNjM4NDM4NjYxfQ.N4g3lRt7Fc-0Tfm7-xm3018XeUMZ_hdR7wr2N3RD7sM',
+        },
     })
     @Post('/signup')
-    static async createUser(@Body() body: CreateUserInterface): Promise<AuthReturnedInterface> {
+    static async createUser(@Body() body: CreateUserInterface): Promise<ResponseInterface> {
         return AuthService.createUser(body);
     }
 
-    @Example<AuthReturnedInterface>({
-        token: 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6MjUsInVzZXJOYW1lIjoiT2x1IiwiZnVsbE5hbWUiOiJPbHUgU29sYSIsImVtYWlsIjoib2xlQG1lLmNvbSIsImlhdCI6MTYzNTcwMzU5NywiZXhwIjoxNjM1NzQ2Nzk3fQ.OLq3KN-DpQXnB9ttNcu1i_HaMTNA115b7hwZTP277YM',
+    @Example<ResponseInterface>({
+        status: 'success',
+        data: {
+            statusCode: 200,
+            message: 'Login successful',
+            payload:
+                'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6NDAsInVzZXJOYW1lIjoiT2x1MTEiLCJmdWxsTmFtZSI6Ik9sdSBTb2xhIiwiZW1haWwiOiJvbHVzQG1lLmNvbSIsImlhdCI6MTYzNTg0NjY2MSwiZXhwIjoxNjM4NDM4NjYxfQ.N4g3lRt7Fc-0Tfm7-xm3018XeUMZ_hdR7wr2N3RD7sM',
+        },
     })
     @Post('/login')
-    static async loginUser(@Body() body: LoginUserInterface): Promise<AuthReturnedInterface> {
+    static async loginUser(@Body() body: LoginUserInterface): Promise<ResponseInterface> {
         return AuthService.loginUser(body);
     }
 }
